# fuzztruction

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
data/: init.vim  ld_fuzztruction.conf  zshrc
env/: Dockerfile-Prebuilt  build-prebuilt-image.sh  build.sh  check_env.sh  config.sh  pull-prebuilt.sh  start.sh  stop.sh
fuzztruction_shared/: Cargo.toml
fuzztruction_shared/src/: abi.rs  alarm_timer.rs  aux_messages.rs  aux_stream.rs  communication_channel.rs  constants.rs  dwarf.rs  lib.rs  log_utils.rs  messages.rs  mutation_cache.rs  mutation_cache_content.rs  mutation_cache_entry.rs  types.rs  util.rs
fuzztruction_shared/src/eval/: coverage_trace.rs  mod.rs
generator/: .gitignore
generator/agent/: Cargo.toml  build.rs
generator/agent/src/: agent.rs  allocator.rs  lib.rs  logging.rs  mem.rs  tracing.rs
generator/agent/src/jit/: jit.rs  mod.rs  util.rs
generator/pass/: Makefile  config.hpp  debug.h  fuzztruction-preprocessing-pass.cc  fuzztruction-preprocessing-pass.hpp  fuzztruction-source-clang-fast.c  fuzztruction-source-llvm-pass.cc  mem_functions.c
lib/compute_coverage/: Cargo.toml
lib/compute_coverage/src/: main.rs
lib/jail/: Cargo.toml
lib/jail/src/: jail.rs  lib.rs
lib/proc-maps/: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  build.rs  setup.cfg
lib/proc-maps/.github/workflows/: ci.yml
lib/proc-maps/ci/: Vagrantfile
lib/proc-maps/ci/scripts/: freebsd-build.sh
lib/proc-maps/ci/testdata/: map.txt
lib/proc-maps/examples/: print_maps.rs
lib/proc-maps/src/: lib.rs  linux_maps.rs  win_maps.rs
lib/proc-maps/src/freebsd_maps/: bindings.rs  mod.rs  protection.rs  ptrace.rs
lib/proc-maps/src/mac_maps/: dyld_bindings.rs  mod.rs
scheduler/: Cargo.toml
scheduler/src/: checks.rs  config.rs  constants.rs  error.rs  io_channels.rs  lib.rs  logging.rs  mutation_cache_ops.rs  patchpoint.rs  sink.rs  sink_bitmap.rs  source.rs  trace.rs
scheduler/src/aflpp/: aflpp_core.rs  mod.rs  symcc.rs  weizz.rs
scheduler/src/cli/: benchmark.rs  benchmark_sink.rs  fuzztruction.rs  handler.rs  stackmap_parser.rs  test_patchpoints.rs  util.rs
scheduler/src/fuzzer/: campaign.rs  common.rs  event_counter.rs  finite_integer_set.rs  mod.rs  queue.rs  worker.rs
scheduler/src/fuzzer/worker_impl/: cerebrum.rs  cerebrum_query.rs  common.rs  init.rs  main_loop.rs  mod.rs  mutators.rs  scheduling.rs
scheduler/src/fuzzer/worker_impl/phases/: add.rs  combine.rs  discovery.rs  mod.rs  mutate.rs  run_common.rs  run_phase.rs  types.rs
scheduler/src/tracer/: core.rs  mod.rs  test_trace.txt
scheduler/src/valgrind/: core.rs  mod.rs
symcc/: symcc.patch
