[package]
name = "generator-agent"
version = "0.1.0"
authors = ["Nils Bars <nils.bars@rub.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1"
chrono = "~0"
fern = { version = "~0", features = ["colored"] }
fuzztruction_shared = { path = "../../fuzztruction_shared" }
keystone = { git = "https://github.com/keystone-engine/keystone", tag = "0.9.2" }
lazy_static = "~1"
libc = "~0"
llvm_stackmap =  {version = "0.1.4", features = ["serde"] }
log = { version = "~0", features = ["kv_unstable"] }
nix = "~0"
posixmq = "~0"
proc-maps = "~0"
serde = { version = "~1", features = ["derive"]}
serde_json = "~1"
thiserror = "~1"
ansi_term = "0.12"

[dependencies.memoffset]
version = "~0"
features = ["unstable_const"]

[lib]
name = "generator_agent"
crate-type = ["staticlib", "cdylib"]
