[package]
name = "coverage"
version = "0.1.0"
authors = ["nbars <nils.bars@rub.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzztruction_shared = { path = "../../fuzztruction_shared" }
serde_json = "~1"
flate2 = "1.0.22"
serde = { version = "~1", features = ["derive", "rc"]}
glob = "0.3.0"
lazy_static = "~1"
rayon = "1.5.1"
indicatif = {version = "*", features = ["rayon"]}
rand = "~0"
